--- a/main_flow-deployment.yaml
+++ b/main_flow-deployment.yaml
@@ -1,12 +1,12 @@
 ###
 ### A complete description of a Prefect Deployment for flow 'main-flow'
 ###
-name: firstofmany
+name: test-demo-github
 description: The main training pipeline
-version: 579e9bb0330c6280a9b5c7408786f472
+version: 3406783fec1e1b897f404a5230caff76
 # The work queue that will handle this deployment's runs
 work_queue_name: default
-work_pool_name: mypool
+work_pool_name: null
 tags: []
 parameters: {}
 schedule: null
@@ -28,8 +28,17 @@ infrastructure:
 ###
 flow_name: main-flow
 manifest_path: null
-storage: null
-path: /home/mussie/Documents/Orchestration with prefect
+storage:
+  repository: https://github.com/mussiehaile/prefct-deployment.git
+  reference: null
+  access_token: null
+  include_git_objects: true
+  _block_document_id: d22cb874-aea2-4d7b-aa74-cf60b97ab352
+  _block_document_name: rmse
+  _is_anonymous: false
+  block_type_slug: github
+  _block_type_slug: github
+path: ''
 entrypoint: orchestrate.py:main_flow
 parameter_openapi_schema:
   title: Parameters
@@ -37,14 +46,14 @@ parameter_openapi_schema:
   properties:
     train_path:
       title: train_path
-      default: ./data/green_tripdata_2022-01.parquet
+      default: ./data/green_tripdata_2023-01.parquet
       position: 0
       type: string
     val_path:
       title: val_path
-      default: ./data/green_tripdata_2022-02.parquet
+      default: ./data/green_tripdata_2023-02.parquet
       position: 1
       type: string
   required: null
   definitions: null
-timestamp: '2023-06-04T10:31:49.263947+00:00'
+timestamp: '2023-06-05T18:36:46.761669+00:00'
